metadata/force-app/main/default/objects/CustomName_iDUWZ__c/CustomName_iDUWZ__c.object-meta.xml
<CustomObject>
    <description>Description_qbAfT</description>
    <label>CustomLabel_ZztZu</label>
    <nameField>
        <label>CustomLabel_ZztZu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZztZus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>