metadata/force-app/main/default/objects/CustomName_iDUWZ__c/fields/CustomField_vBiDm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vBiDm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJOzsB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>